[project]
name = "agentkata-policy-answer-with-citations-langgraph"
version = "0.1.0"
description = "LangGraph example for solving the AgentKata policy-answer-with-citations task"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "agentkata>=0.1.2",
  "langchain-anthropic>=0.3.0",
  "langgraph>=1.0.8",
  "langchain-openai>=0.3.0",
  "pydantic-settings>=2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
