[project]
name = "agentkata-secret-echo-pydantic-ai"
version = "0.1.0"
description = "Minimal PydanticAI example for solving the AgentKata secret-echo task"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "agentkata>=0.1.2",
  "pydantic-ai>=1.0.5",
  "pydantic-settings>=2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
